mtsj-booking-all.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: booking
  name: booking
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8082
    name: http    
  selector:
    app: booking
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: booking
    version: "1.0"
  name: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: booking
    spec:
      containers:
      - name: booking
        image: mtsj-booking/java:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8082
        resources: {}
status: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: booking
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /mythaistar/services/rest/bookingmanagement/v1    
    route:
    - destination:
        port:
          number: 80
        host: booking.default.svc.cluster.local
---
