mtsj-dish-all.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dish
  name: dish
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 9080
    name: http    
  selector:
    app: dish
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: dish
    version: "1.0"
  name: dish
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dish
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: dish
    spec:
      containers:
      - name: dish
        image: mtsj-dish/java:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        resources: {}
status: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mtsj-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dish
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /mythaistar/services/rest/dishmanagement/v1    
    route:
    - destination:
        port:
          number: 9080
        host: dish
---
