mtsj-order-all.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: order
  name: order
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8085
    name: http    
  selector:
    app: order
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: order
    version: "1.0"
  name: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: order
    spec:
      containers:
      - name: order
        image: mtsj-order/java:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8085
        resources: {}
status: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /mythaistar/services/rest/ordermanagement/v1    
    route:
    - destination:
        port:
          number: 80
        host: order.default.svc.cluster.local
---
