mtsj-user-all.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: user
  name: user
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8086
    name: http    
  selector:
    app: user
  type: NodePort
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user
    version: "1.0"
  name: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user
    spec:
      containers:
      - name: user
        image: mtsj-user/java:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8086
        resources: {}
status: {}
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user
spec:
  hosts:
  - "*"
  gateways:
  - mtsj-gateway
  http:
  - match:
    - uri:
        prefix: /mythaistar/services/rest/usermanagement/v1    
    route:
    - destination:
        port:
          number: 80
        host: user.default.svc.cluster.local
---
